# template-python

./: .gitignore  .sync-manifest.yml  CONTRIBUTING.md  README.md  cog.toml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
