[project]
name = "REPO_NAME"
version = "0.1.0"
description = "TODO: Add description"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/gremlinltd/REPO_NAME"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6",
    "ruff>=0.11",
]
